fix the height overflow
the table was above the footer this fix it by changing the height of the main to fit content

--- a/style.css
+++ b/style.css
@@ -90,12 +90,13 @@ font-family: 'Mr Dafoe', cursive; */
 }
 /*main*/
 main{
-    height: 80%;
+    height: fit-content;
 }
 /*footer*/
 footer {
+    background-color: red;
     width: 100%;
-    height: 10%;
+    height: 20%;
     border-top: solid var(--secondColor) 1px;
 }
 
@@ -138,6 +139,8 @@ transition: 0.6s;
 
 /*staff*/
 .staff {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     margin: 5rem;
 }
